# tickticksync

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml  publish.yml
docs/plans/: 2026-03-01-tickticksync-design.md  2026-03-01-tickticksync-impl.md
src/tickticksync/: cli.py  config.py  daemon.py  hooks.py  mapper.py  state.py  sync.py  taskwarrior.py  ticktick.py
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_hooks.py  test_mapper.py  test_state.py  test_sync.py  test_taskwarrior.py  test_ticktick.py
